--- a/blog-app/backend/package.json
+++ b/blog-app/backend/package.json
@@ -11,15 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
+    "@google-cloud/storage": "^7.12.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2",
-    "multer": "^1.4.5-lts.1",
-    "react-redux": "^9.1.2"
+    "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
